--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -9,6 +9,8 @@
     <title>React App</title>
     <style>
       .li:nth-child(odd) { background: #fab; }
+      div { width: 500px; padding: 20px; margin: 50px; border: 2px solid #f9b; }
+      .btn { margin-top: 20px; }
     </style>
   </head>
   <body>
