--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -11,6 +11,8 @@
       .li:nth-child(odd) { background: #fab; }
       div { width: 500px; padding: 20px; margin: 50px; border: 2px solid #f9b; }
       .btn { margin-top: 20px; }
+      input { width: 30px; text-align: center; }
+      .input_lg { width: 60px; }
     </style>
   </head>
   <body>
