new lifeCycles including getDerivedStateFromProps and getSnapshotBeforeUpdate

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -9,7 +9,7 @@
     <title>React App</title>
     <style>
       .li:nth-child(odd) { background: #fab; }
-      div { width: 500px; padding: 20px; margin: 50px; border: 2px solid #f9b; }
+      /* div { width: 500px; padding: 20px; margin: 50px; border: 2px solid #f9b; } */
       .btn { margin-top: 20px; }
       input { width: 30px; text-align: center; }
       .input_lg { width: 60px; }
