--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -13,6 +13,8 @@
       .btn { margin-top: 20px; }
       input { width: 30px; text-align: center; }
       .input_lg { width: 60px; }
+      .ml_10 { margin-left: 10px; }
+      div { border-radius: 8px; }
     </style>
   </head>
   <body>
