--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -14,11 +14,14 @@
       input { width: 30px; text-align: center; }
       .input_lg { width: 60px; }
       .ml_10 { margin-left: 10px; }
-      div { border-radius: 8px; }
+      div { border-radius: 8px; border: 1px solid #f9b; }
+      input { width: 200px; box-shadow: 0 0 20px 0 rgba(0,0,0,.1);  }
     </style>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script>
+      localStorage.setItem('username', "stella");
+    </script>
   </body>
 </html>
