--- a/redux-app/public/index.html
+++ b/redux-app/public/index.html
@@ -15,6 +15,7 @@
       .mr-10 { margin-right: 10px; }
       #root { margin: 40px auto; width: 300px; padding: 10px; border: 1px solid #f9b; }
       p { color: red; font-weight: 700; font-size: 30px; }
+      .inactive { color: #ddd; }
     </style>
     <title>React App</title>
   </head>
