--- a/redux-app/public/index.html
+++ b/redux-app/public/index.html
@@ -16,6 +16,7 @@
       #root { margin: 40px auto; width: 300px; padding: 10px; border: 1px solid #f9b; }
       p { color: red; font-weight: 700; font-size: 30px; }
       .inactive { color: #ddd; }
+      .dark { color: #666; }
     </style>
     <title>React App</title>
   </head>
