--- a/router-app/public/index.html
+++ b/router-app/public/index.html
@@ -10,6 +10,9 @@
       content="Web site created using create-react-app"
     />
     <title>Router App</title>
+    <style>
+      ul.navbar-nav { margin: 0; }
+    </style>
   </head>
   <body>
     <div id="root"></div>
